revison memoria 11 closes #66

--- a/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -1,58 +1,57 @@
 \capitulo{7}{Conclusiones y Líneas de trabajo futuras}
 
-En este apéndice se expone las conclusiones tras la finalización del proyecto final de grado, así como todas las posibles ideas o líneas de trabajo futuras, con el fin de que el proyecto mantenga una continuidad.
+En este apéndice se expone las conclusiones una vez realizado el proyecto final de grado, así como todas las posibles ideas o líneas de trabajo futuras, con el fin de que el proyecto mantenga una continuidad.
 
 \section{Conclusiones}
 
 \begin{itemize}
-	\item El objetivo general del proyecto se ha cumplido, ya que todos los requisitos funcionales, como los no funcionales, fueron realizados de manera satisfactoria. Aunque es revisable la mejora de ciertos aspectos, como el diseño de algunas ventanas de la aplicación.
+	\item El objetivo general del proyecto se ha cumplido, ya que todos los requisitos funcionales, como los no funcionales, fueron realizados de manera satisfactoria. Aunque es revisable la mejora de ciertos aspectos, como el diseño de algunas interfaces de la aplicación.
 		
-	\item Todo el proceso que engloba crear una aplicación, desde la adquisición de los conocimientos, el desarrollo, el diseño, revisiones de producto, la planificación, hasta el despliegue final. 
+	\item Todas las fases que engloba crear una aplicación, desde la adquisición de los conocimientos, el desarrollo, el diseño, revisiones de producto, la planificación, hasta el despliegue final, han cumplido las condiciones deseadas. 
 	
-	Indica que se han tocado la mayoría de los conocimientos adquiridos durante el grado, pero que aún así es necesario el constante avance formativo.
+	Esto indica que se han utilizado la mayoría de los conocimientos adquiridos durante el grado, pero que aún así es necesario el constante avance formativo.
 	
-	\item Adquirir los conocimientos necesarios para la creación de una aplicación en Flutter, ya que es un SDK de gran versatilidad, permitiendo hacer aplicaciones en un tiempo menor.
+	\item He adquirido los conocimientos necesarios para la creación de una app de Android en Flutter, ya que es un SDK de gran versatilidad, permitiendo hacer aplicaciones en un tiempo menor.
 	
-	 Aprender también las herramientas que ofrecidas por parte de Google como Firebase o adMob. \emph{Tools} que desconocía, pero que dan gran valor añadido al producto final.
+	 También he aprendido a utilizar las herramientas que son ofrecidas por parte de Google como Firebase o adMob. \emph{Tools} las cuales desconocía, pero que dan un gran valor añadido al producto final.
 	
 	\item Durante todo el proyecto se usaron gran variedad de aplicaciones, herramientas o dispositivos que ayudaron a mejorar la calidad, rendimiento y funcionalidad del producto final o de algunos de los procesos intermedios. Esto implica tener que especializarse en cada una de ellas, lo que consume recursos temporales.
 	
-	Pero a la larga este conocimiento aprendido ayudará a tener mejores productos en el futuro.
+	Pero en el futuro estos conocimientos adquiridos ayudarán a conseguir mejores productos y de una calidad superior.
 	
-	\item Lidiar con gran incertidumbre, esto se debe que a la hora de planificar es difícil estimar correctamente las horas. Lo que en próximos proyectos puede ser una complicación. Por lo que es una cosa que tengo que mejorar.
+	\item He lidiado con una gran incertidumbre, esto se debe que a la hora de planificar es difícil estimar correctamente las horas a destinar a cada una de las tareas. Lo que en próximos proyectos puede ser una complicación. Creo que es un aspecto a mejorar.
 	
 	Es de gran importancia ajustarse lo máximo posible a la realidad y no pecar de pesimista como es mi caso, ya que planifico más horas de las que luego realmente se invierten.
 	
-	\item La investigación como parte fundamental a la hora de añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
+	\item Me a llevado un gran proceso de investigación y aprendizaje, para poder añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
 	
-	\item Los costes del proyecto tuvieron superávit, es decir los el coste total del proyecto fue menor que los costes estimados. Además a futuro es probable que tengamos entrada de ingresos por parte de la publicidad o por nuevas vías.
+	\item El objetivo de los costes fue logrado. Ya que el proyecto tuvo superávit, es decir, el coste real total fue menor que los costes totales estimados. Además a futuro es probable que tengamos entrada de ingresos por parte de la publicidad o por nuevas vías.
 	
 \end{itemize}
 
-En definitiva, personalmente estoy muy contento de haber trabajado duro y haber conseguido una aplicación, ya que desconocía la programación en Android, lo que me ha hecho crecer como persona, pero sobretodo en el ámbito profesional.
+En definitiva, personalmente estoy muy contento de haber logrado todos los objetivos definidos y considero que he conseguido diseñar una aplicación funcional. Además ha sido una gran reto la programación en Android, lo que me ha hecho crecer como persona, pero sobretodo en el ámbito profesional.
 
 
 \section{Líneas de trabajo futuras}
 
-
 \begin{itemize}
-\item La idea es que la aplicación retenga el mayor tiempo posible a los usuarios para publicidad. Para ello la biblioteca de juegos tiene que seguir creciendo. 
+\item La idea es que la aplicación retenga el mayor tiempo posible a los usuarios para obtener ingresos mediante la publicidad. Para ello la biblioteca de juegos tiene que seguir creciendo. 
 
-Estos nuevos juegos, se deben de planificar en base a la publicidad para sacar el mayor retorno económico.
+Estos nuevos juegos, se deben de planificar en base a los anuncios, para sacar el mayor rendimiento económico.
 
 \item Internacionalización de la aplicación, para estar disponible en un mayor número de países, de tal manera que el mercado que abarque sea más amplio.
 
-\item Integración de test automáticos como de nuevas metodologías de desarrollo dirigido por test (TDD). Esto mejoraría sustancialmente el rendimiento del programador.
+\item Integración de test automáticos, como de nuevas metodologías de desarrollo dirigido por test (TDD). Esto mejoraría sustancialmente la revisión de la aplicación como el rendimiento del programador.
 
-\item Estudio de nuevas herramientas o frameworks destinados a la creación de videojuegos. De tal forma que se pueda migrar los dos juegos actuales, con el fin de ganar un mayor rendimiento.
+\item Estudio de nuevas herramientas o frameworks destinados a la creación de videojuegos. De tal forma que se pueda migrar los dos juegos actuales, con el fin de ganar un mayor rendimiento. O para crear nuevos juegos más potentes, ya que los usados utilizan Flutter nativo, que no es una herramienta de creación de videojuegos.
 
-\item Añadir una inteligencia artificial al juego del cuatro en raya, de tal manera que no solo se pueda jugar online, si no contra la CPU. Como idea esta podría integrar tres niveles de complejidad: facíl, medio y experto. Dentro de la propia Firebase de Google tenemos herramientas de \emph{Cloud computing}, como el \emph{ML kit (Machine learning kit)}. 
+\item Añadir una inteligencia artificial al juego del cuatro en raya, de tal manera que no solo se pueda jugar online, si no también contra la CPU. Como idea esta podría integrar tres niveles de complejidad: fácil, medio y experto. Dentro de la propia Firebase de Google tenemos herramientas de \emph{Cloud computing}, como el \emph{ML kit (Machine learning kit)}, que podrían sernos de utilidad. 
 
-Este kit tiene herramientas muy conocidas de Google como puede ser el reconocimiento de texto, etiquetado de las imágenes o detección de las caras, pero se pueden añadir nuestro propios modelos.
+Este kit tiene herramientas muy conocidas de Google como puede ser el reconocimiento de texto, etiquetado de las imágenes o detección de las caras, pero también se pueden añadir nuestros modelos más específicos.
 
-\item Realizar el despligue de la aplicación en la tienda de Apple \emph{App Store}, para dispositivos iOS. Y la creación de un hosting donde podamos alojar la aplicación web.
+\item Realizar el despligue de la aplicación en la tienda de Apple \emph{App Store}, para dispositivos iOS. Y la creación de un hosting donde podamos alojar la aplicación web. Además de la revisión de algunos widgets, porque no todos tienen soporte para estos entornos.
 	
 \item Integración y exploración de las herramientas de videojuegos como \emph{Play juegos} de Google y la de Apple con su \emph{Game Center}. Esto podría permitirnos las compras in-app.
 
-\item Implementación de algún juego de realidad aumentada con la integración de la publicidad también.
+\item Implementación de algún juego de realidad aumentada con la integración de la publicidad.
 \end{itemize}
