Intro en inglés closes #50

--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -449,7 +449,14 @@ La aplicación se ha desarrollado en Flutter. Este entorno ofrece la posibilidad
 % Abstract en inglés
 \renewcommand*\abstractname{Abstract}
 \begin{abstract}
-	
+
+Currently, we live in a society marked by new technologies, it can even be said that they have become something essential.
+
+Furthermore, the mobile application market is constantly growing. So as software computer engineers, we have to prepare for this new reality.
+
+The main objective of this work is to develop an application for the Android operating system. It consists of a collection of games, to entertain users and to achieve economic performance through the ads it includes.
+
+The application has been developed in Flutter. This framework offers the possibility of creating applications for: Android, iOS and web, in an agile way. With the great advantage that it brings cost savings for developers, because they do not need to know the native code.
 \end{abstract}
 
 \renewcommand*\abstractname{Keywords}
