--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -16,6 +16,8 @@
 
 % Links
 \PassOptionsToPackage{hyphens}{url}\usepackage[colorlinks]{hyperref}
+\let\oldhref\href
+\renewcommand{\href}[2]{\oldhref{#1}{#2}\footnote{\url{#1}}}
 \hypersetup{
 	allcolors = {red}
 }
