--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -11,6 +11,7 @@ A continuación, se detallan los objetivos que han motivado la realización de e
 	\item Implementación y despliegue de la app en la tienda de Google.
 	\item Obtener el rendimiento económico mediante publicidad.
 	\item Hacer que los usuarios pasen un buen rato.
+	\item Colección de juegos, inicialmente contara con el cuatro en raya y el snake.F
 	\item Mostrar quién es el creador de la aplicación, con el fin de poder usar esta como \emph{portfolio}.
 	\item Desarrollar juegos.
 \end{itemize}
@@ -36,7 +37,7 @@ A continuación, se detallan los objetivos que han motivado la realización de e
 	\item Estudiar como generar documentación en \LaTeX.
 	\item Comprender el funcionamiento de la comunicación entre una aplicación y los servicios en la nube.
 	\item Reforzar los conocimientos adquiridos durante la carrera.
-	\item Investigar diferentes herramientas para solventar los problemas que salgan.
+	\item Investigar diferentes herramientas para solventar los problemas que surjan.
 	\item Adquirir las nociones necesarias para poder llevar proyectos.
 	\item Conseguir manejarme en entornos de incertidumbre.
 \end{itemize}
