--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -1,6 +1,6 @@
 \capitulo{3}{Conceptos teóricos}
 
-El proyecto cubre todo el proceso de creación de la aplicación, desde el diseño, implementación del código, hasta el despliegue de la misma en la \emph{Play Store}. Para ello se ha tenido que realizar una investigación para determinar que herramientas, lenguajes de programación, entornos de desarrollo son los más apropiados para un despliegue ágil.
+El proyecto cubre todo el proceso de creación de la aplicación, desde el diseño, implementación del código, hasta el despliegue de la misma en la \emph{Play Store}. Para ello se ha tenido que realizar un proceso de búsqueda para determinar que herramientas, lenguajes de programación, entornos de desarrollo son los más apropiados para un despliegue ágil.
 
 Todo esto se sitúa en un mercado altamente competitivo, con una gran variabilidad (usuarios, empresas, desarrolladores ...) y con un constante cambio. 
 
@@ -22,13 +22,13 @@ Estas se denominan así porque se desarrollan en el lenguaje nativo de cada uno 
 
 Las ventajas principales son: están desarrolladas directamente sobre la capa nativa del dispositivo, el rendimiento será óptimo y todas las funcionalidades y características estarán disponibles desde el primer momento.
 
-Entre las desventajas: el elevado coste y mantenimiento, ya que requiere personal más especializado, con mayor tiempo destinado al desarrollo. Pero el mayor \emph{gap} lo encontramos en que el código nativo de una plataforma no puede ser reutilizado para la otra. Algo que los frameworks actuales están empezando a ofrecer.
+Entre las desventajas: el elevado coste y mantenimiento, ya que requiere personal más especializado, con mayor tiempo destinado al desarrollo. Pero el mayor inconveniente lo encontramos en que el código nativo de una plataforma no puede ser reutilizado para la otra. Algo que los frameworks actuales están empezando a ofrecer.
 
 \section{Aplicaciones híbridas mediante Framework}
 Un framework (término de origen anglosajón: marco de trabajo)~\cite{wiki:framework}, es una estructura conceptual y tecnológica de soporte definido, normalmente por módulos de software concretos, que sirve de base para la organización y el desarrollo de software. Las ventajas que ofrece son varias, entre las que se puede destacar:
 
 \begin{itemize}
-	\item \textbf{Único código fuente}: desarrollo de aplicaciones multiplataforma con un único lenguaje, reduciendo los costes de creación, mantenimiento y recursos destinados. Actualmente no todos los frameworks ofrecen esto, pero en la gran mayoría si que se está integrando, ya que existe una gran lucha por la competitividad.
+	\item \textbf{Único código fuente}: desarrollo de aplicaciones multiplataforma con un único lenguaje, reduciendo los costes de creación, mantenimiento y recursos destinados. Actualmente no todos los frameworks ofrecen esto, pero en la gran mayoría sí que se está integrando, ya que existe una gran lucha por la competitividad.
 	\item \textbf{Evita repetición de código:} las partes más usadas, pasan a ser algo del \emph{core} del framework o simplemente que se pueden reutilizar fácilmente. 
 	\item \textbf{Uso de buenas prácticas:} están basados en patrones de diseño que nos obligan a usar.
 	\item \textbf{Elementos avanzados integrados:} dispone de librerías nativas que ofrecen \emph{Widgets} o funcionalidades de gran calidad, que llevan mucho tiempo implementar, o que la creación de los mismo desde cero, no llegaría a obtener una calidad del mismo nivel.
@@ -46,7 +46,7 @@ En el mercado existen muchos frameworks disponibles para el desarrollo de aplica
 	\caption{Encuesta en Forocoches}\label{fig:encuesta}
 \end{figure}
 
-Uno de los objetivos a la hora de encontrar el framework con el que hacer la aplicación, es que abarque el mayor número de dispositivos y usuarios. Es decir, que sea un framework \emph{crossplataform}.
+Uno de los objetivos a la hora de encontrar el framework con el que hacer la aplicación, es que abarque el mayor número de dispositivos y usuarios. Es decir, que sea un framework \emph{crossplatform} o multiplataforma .
 
 \subsubsection{Ionic}
 Ionic~\cite{wiki:ionnic} se basa en lenguaje de programación javascript, html y css. Internamente esta basado en otro framework, como es Angularjs. La licencia es Open source, fue lanzado en el 2013 y permite el desarrollo para iOS y Android. A sufrido gran cantidad de cambios desde entonces.
